# Celery

./: pyproject.toml
kafkaTaskQueue/: celery_app.py  celery_config.py
redisTaskQueue/: celery_app.py  celery_config.py
rmqTaskQueue/: celery_config.py
tasks/: task.py
