[tool.poetry]
name = "Celery"
version = "0.0.0"
description = "Celery app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uwsgi = ">=2.0.18"
itsdangerous = ">=2.1.2"
amqp = "5.1.1"
celery = "5.2.2"
kombu = "5.3.0"
confluent-kafka = "2.4.0"
redis = "^5.0.8"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
